--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+certifi==2018.1.18
+chardet==3.0.4
+click==6.7
+coreapi==2.3.3
+coreapi-cli==1.0.9
+coreschema==0.0.4
 dataclasses==0.4
 Django==2.0.2
 django-filter==1.1.0
@@ -5,8 +11,16 @@ django-split-settings==0.3.0
 djangorestframework==3.7.7
 djangorestframework-jwt==1.11.0
 djangotoolbox==1.8.0
+ez-setup==0.9
+idna==2.6
+itypes==1.1.0
+Jinja2==2.10
+MarkupSafe==1.0
 mysqlclient==1.3.12
 PyJWT==1.5.3
 pytz==2018.3
+requests==2.18.4
 six==1.11.0
 sqlparse==0.2.4
+uritemplate==3.0.0
+urllib3==1.22
