--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ coreschema==0.0.4
 dataclasses==0.4
 Django==2.0.2
 django-filter==1.1.0
+django-rest-swagger==2.2.0
 django-split-settings==0.3.0
 djangorestframework==3.7.7
 djangorestframework-jwt==1.11.0
@@ -17,9 +18,11 @@ itypes==1.1.0
 Jinja2==2.10
 MarkupSafe==1.0
 mysqlclient==1.3.12
+openapi-codec==1.3.2
 PyJWT==1.5.3
 pytz==2018.3
 requests==2.18.4
+simplejson==3.14.0
 six==1.11.0
 sqlparse==0.2.4
 uritemplate==3.0.0
