--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,10 @@ coreapi-cli==1.0.9
 coreschema==0.0.4
 dataclasses==0.4
 Django==2.0.2
+django-appconf==1.0.2
 django-cors-headers==2.2.0
 django-filter==1.1.0
+django-imagekit==4.0.2
 django-rest-swagger==2.2.0
 django-split-settings==0.3.0
 djangorestframework==3.8.2
@@ -19,6 +21,8 @@ itypes==1.1.0
 Jinja2==2.10
 MarkupSafe==1.0
 mysqlclient==1.3.12
+pilkit==2.0
+Pillow==5.1.0
 openapi-codec==1.3.2
 PyJWT==1.5.3
 pytz==2018.3
