--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ coreapi-cli==1.0.9
 coreschema==0.0.4
 dataclasses==0.4
 Django==2.0.2
+django-appconf==1.0.2
 django-filter==1.1.0
+django-imagekit==4.0.2
 django-split-settings==0.3.0
 djangorestframework==3.7.7
 djangorestframework-jwt==1.11.0
@@ -17,6 +19,8 @@ itypes==1.1.0
 Jinja2==2.10
 MarkupSafe==1.0
 mysqlclient==1.3.12
+pilkit==2.0
+Pillow==5.1.0
 PyJWT==1.5.3
 pytz==2018.3
 requests==2.18.4
