--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+atomicwrites==1.1.5
+attrs==18.1.0
 certifi==2018.1.18
+cffi==1.11.5
 chardet==3.0.4
 click==6.7
+colorama==0.3.9
 coreapi==2.3.3
 coreapi-cli==1.0.9
 coreschema==0.0.4
@@ -16,19 +20,33 @@ djangorestframework==3.8.2
 djangorestframework-jwt==1.11.0
 djangotoolbox==1.8.0
 ez-setup==0.9
+Flask==1.0.2
+gevent==1.3.5
+greenlet==0.4.14
 idna==2.6
+itsdangerous==0.24
 itypes==1.1.0
 Jinja2==2.10
+locustio==0.8.1
 MarkupSafe==1.0
+more-itertools==4.2.0
+msgpack-python==0.5.6
 mysqlclient==1.3.12
+openapi-codec==1.3.2
 pilkit==2.0
 Pillow==5.1.0
-openapi-codec==1.3.2
+pluggy==0.6.0
+py==1.5.4
+pycparser==2.18
 PyJWT==1.5.3
+pytest==3.6.3
+pytest-django==3.3.2
 pytz==2018.3
+pyzmq==17.1.0
 requests==2.18.4
 simplejson==3.14.0
 six==1.11.0
 sqlparse==0.2.4
 uritemplate==3.0.0
 urllib3==1.22
+Werkzeug==0.14.1
