--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 atomicwrites==1.1.5
 attrs==18.1.0
+autopep8==1.4
 certifi==2018.1.18
 cffi==1.11.5
 chardet==3.0.4
@@ -12,9 +13,11 @@ dataclasses==0.4
 Django==2.0.2
 django-appconf==1.0.2
 django-cors-headers==2.2.0
+django-debug-toolbar==1.10.1
 django-filter==1.1.0
 django-imagekit==4.0.2
 django-rest-swagger==2.2.0
+django-silk==3.0.1
 django-split-settings==0.3.0
 djangorestframework==3.8.2
 djangorestframework-jwt==1.11.0
@@ -22,6 +25,7 @@ djangotoolbox==1.8.0
 ez-setup==0.9
 Flask==1.0.2
 gevent==1.3.5
+gprof2dot==2016.10.13
 greenlet==0.4.14
 idna==2.6
 itsdangerous==0.24
@@ -37,10 +41,13 @@ pilkit==2.0
 Pillow==5.1.0
 pluggy==0.6.0
 py==1.5.4
+pycodestyle==2.4.0
 pycparser==2.18
+Pygments==2.2.0
 PyJWT==1.5.3
 pytest==3.6.3
 pytest-django==3.3.2
+python-dateutil==2.7.3
 pytz==2018.3
 pyzmq==17.1.0
 requests==2.18.4
